post_method_exit might incorrectly set was_popped_by_exception and value in the middle of stack unwinding

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • None
    • b15

      The void JvmtiExport::post_method_exit(JavaThread* thread, Method* method, frame current_frame) calculates
        bool exception_exit = state->is_exception_detected() && !state->is_exception_caught();

      to understand if method exit normally or by exception.
      However, this method is not called in the case of exception. See
      `void JvmtiExport::notice_unwind_due_to_exception(JavaThread *thread, Method* method, address location, oop exception, bool in_handler_frame)`
      where post_method_exit_inner is called directly.

            Assignee:
            Leonid Mesnik
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: