8365937: post_method_exit might incorrectly set was_popped_by_exception and value in the middle of stack unwinding

Reviewed-by: dholmes, pchilanomate